# Job-Search-AI-Agent

./: agent.py  config.py  database.py  pyproject.toml  requirements.txt  streamlit_app.py  validation_agent.py
chroma_db/: chroma.sqlite3
